--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ categories = ["api-bindings"]
 
 
 [dependencies]
-futures.workspace = true
+futures = "0.3"
 log = "0.4.21"
 regex = "1.12.2"
 reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart", "stream"] }
